# nunalleq-synth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
configs/: default.yaml  fast_preview.yaml  high_quality.yaml
docs/: INSTALLATION.md
examples/: basic_generation.py  batch_processing.py  custom_randomization.py
nunalleq_synth/: __init__.py  __main__.py  __version__.py
nunalleq_synth/annotation/: __init__.py  bbox.py  validation.py  yolo.py
nunalleq_synth/core/: __init__.py  camera.py  physics.py  renderer.py  scene.py
nunalleq_synth/objects/: __init__.py  loader.py  material.py  transform.py
nunalleq_synth/pipeline/: __init__.py  batch.py  config.py  generator.py
nunalleq_synth/randomization/: __init__.py  camera.py  environment.py  lighting.py
nunalleq_synth/utils/: __init__.py  gpu.py  io.py  logger.py
scripts/: setup_blender.sh  validate_dataset.py
tests/: conftest.py
tests/test_core/: test_scene.py
tests/test_pipeline/: test_generator.py
