[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nunalleq-synth"
version = "0.1.0"
description = "Physics-based synthetic data generation for Yup'ik artifact object detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nalaquq, LLC", email = "info@nalaquq.com"}
]
keywords = ["synthetic-data", "computer-vision", "object-detection", "blender", "cultural-heritage"]

[project.urls]
Homepage = "https://github.com/nalaquq/nunalleq-synth"
Documentation = "https://nunalleq-synth.readthedocs.io"
Repository = "https://github.com/nalaquq/nunalleq-synth"
Issues = "https://github.com/nalaquq/nunalleq-synth/issues"

[project.scripts]
nunalleq-synth = "nunalleq_synth.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "bpy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]