[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nunalleq-synth"
version = "0.1.0"
description = "Physics-based synthetic data generation for Yup'ik artifact object detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nalaquq, LLC", email = "info@nalaquq.com"}
]
keywords = ["synthetic-data", "computer-vision", "object-detection", "blender", "cultural-heritage"]

# Core dependencies (without Blender)
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.7.0,<5.0.0",
    "Pillow>=9.5.0,<11.0.0",
    "PyYAML>=6.0,<7.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.6.0",
]

# Optional dependencies
[project.optional-dependencies]
# Blender support (required for actual data generation)
blender = [
    "bpy>=3.6.0",
]

# Development dependencies
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
    "ipython>=8.12.0",
    "ipdb>=0.13.13",
]

# Documentation dependencies
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

# All dependencies (for production use)
all = [
    "bpy>=3.6.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
    "ipython>=8.12.0",
    "ipdb>=0.13.13",
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nalaquq/nunalleq-synth"
Documentation = "https://nunalleq-synth.readthedocs.io"
Repository = "https://github.com/nalaquq/nunalleq-synth"
Issues = "https://github.com/nalaquq/nunalleq-synth/issues"

[project.scripts]
nunalleq-synth = "nunalleq_synth.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "bpy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]