
# ============================================================================
# setup.cfg
# ============================================================================
"""
[metadata]
name = nunalleq-synth
description = Physics-based synthetic data generation for Yup'ik artifact object detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nalaquq/nunalleq-synth
author = Nalaquq, LLC
author_email = info@nalaquq.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    opencv-python>=4.7.0
    Pillow>=9.5.0
    PyYAML>=6.0
    tqdm>=4.65.0
    pydantic>=2.0.0

[options.packages.find]
exclude =
    tests
    tests.*
    examples

[options.entry_points]
console_scripts =
    nunalleq-synth = nunalleq_synth.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv
max-complexity = 10
"""
